--- a/Final_Temp/styles/style.css
+++ b/Final_Temp/styles/style.css
@@ -85,7 +85,7 @@ button {
 
 /* Add chat (+) button */
 .add-chat-btn {
-    background-color: #2196f3;
+    background-color: #333;
     border: none;
     color: white;
     position: absolute;
@@ -163,13 +163,13 @@ button {
     white-space: pre-wrap;
 }
 .message.user {
-    background-color: #4caf50;
-    color: white;
+    background-color: #ddd;
+    color: black;
     align-self: flex-end;
     border-bottom-right-radius: 0;
 }
 .message.bot {
-    background-color: #2196f3;
+    background-color: #333;
     color: white;
     align-self: flex-start;
     border-bottom-left-radius: 0;
